git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1133 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/nexus-s3-plugin/pom.xml
+++ b/nexus-s3-plugin/pom.xml
@@ -54,6 +54,25 @@
       these dependencies. The ITset of requirements in this POM are put in between "#ITSet BEGINS" and "#ITSet ENDS" pair of
       comments.
     -->
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk</artifactId>
+      <version>1.2.3</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-core-asl</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 
     <!-- Main plugin API, pulling in what is needed -->
     <dependency>
