git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1151 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali-sql/pom.xml
+++ b/kuali-sql/pom.xml
@@ -18,14 +18,13 @@
   <description>General purpose library of SQL statements</description>
   <groupId>org.kuali.db.sql</groupId>
   <artifactId>kuali-sql</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
   </properties>
-
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-sql-1.0.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-sql-1.0.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-sql-1.0.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-sql</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-sql</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/trunk/kuali-sql</url>
   </scm>
 </project>
