git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1155 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali-sql/pom.xml
+++ b/kuali-sql/pom.xml
@@ -27,4 +27,13 @@
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-sql</developerConnection>
     <url>http://svn.kuali.org/repos/foundation/pom/trunk/kuali-sql</url>
   </scm>
+  <developers>
+    <developer>
+      <id>jcaddel</id>
+      <name>Jeff Caddel</name>
+      <organization>rSmart</organization>
+      <timezone>-7</timezone>
+      <email>jcaddel(at)kuali.org</email>
+    </developer>
+  </developers>
 </project>
