git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1159 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sql-maven-plugin/pom.xml
+++ b/sql-maven-plugin/pom.xml
@@ -60,7 +60,7 @@
     <developer>
       <id>jcaddel</id>
       <name>Jeff Caddel</name>
-      <email>jcaddel@kuali.org</email>
+      <email>jcaddel(at)kuali.org</email>
       <roles>
         <role>Java Developer</role>
       </roles>
