Updating import masks for kcwklyig
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5789 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcwklyig/deploy.cfg
+++ b/kc/kcwklyig/deploy.cfg
@@ -1,9 +1,12 @@
 svnLocation=kc_project/trunk
+dbSvnLocation=kc_project/branches/kc_project-db_test
 deployURL=test.kc.kuali.org:/opt/kc/wklyig/webapps/kc-wklyig.war
 configURL=test.kc.kuali.org:~/kuali/main/wklyig/
 
 dbType=mysql
 dbMode=embedded
+dbParent=dba
+dbImportMasks=KCR_*_B000.sql KC_*_B000.sql kcwklyig/KC_*_??S?.sql
 import.torque.database.user=kcwklyig
 import.torque.database.schema=kcwklyig
 import.torque.database.password=wklyig174kc
