Updating configurations for new db procedure
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5790 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/krdba/deploy.cfg
+++ b/kc/krdba/deploy.cfg
@@ -1,3 +1,10 @@
 svnLocation=rice/tags/rice-1.0.3.2
+dbSvnLocation=kc_project/branches/kc_project-db_test
 deployURL=test.kc.kuali.org:/opt/kc/dba/webapps/kr-dba.war
 configURL=test.kc.kuali.org:~/kuali/main/dba/
+
+dbType=oracle
+dbMode=embedded
+export.torque.database.user=krdba
+export.torque.database.schema=krdba
+export.torque.database.password=dba174kr
