Changing back case on config in favor of compensating in script
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5792 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcdba/deploy.cfg
+++ b/kc/kcdba/deploy.cfg
@@ -2,6 +2,6 @@ dbSvnLocation=kc_project/branches/kc_project-db_test
 
 dbType=oracle
 dbMode=embedded
-export.torque.database.user=KCDBA
-export.torque.database.schema=KCDBA
+export.torque.database.user=kcdba
+export.torque.database.schema=kcdba
 export.torque.database.password=dba174kc
