--- a/kc/kc311ci/deploy.cfg
+++ b/kc/kc311ci/deploy.cfg
@@ -1,6 +1,6 @@
 dbSvnLocation=kc_project/branches/kc_project-db_test
 
-dbType=both
+dbType=oracle
 dbMode=bundled
 dbParent=dba
 dbImportMasks=KR_*_B000.sql KRC_*_B000.sql KC_*_B000.sql KR_*_?T??.sql KRC_*_?T??.sql KC_*_?T??.sql
