Fixing typo in config
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5794 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kc311cim/deploy.cfg
+++ b/kc/kc311cim/deploy.cfg
@@ -1,8 +1,8 @@
-dbSvnLocation=kc_project/branches/kc_project-db_test
+dbSvnLocation=kc_project/trunk
 
 dbType=mysql
 dbMode=bundled
-dbParent=kc311ci
+dbParent=311ci
 import.torque.database.user=kc311cim
 import.torque.database.schema=kc311cim
 import.torque.database.password=cim174kc
