Updating db configs for new db procedure
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5797 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/krwkly30/deploy.cfg
+++ b/kc/krwkly30/deploy.cfg
@@ -1,8 +1,10 @@
 svnLocation=rice/tags/rice-1.0.3.2
+dbSvnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kr-wkly30.war
 configURL=test.kc.kuali.org:~/kuali/main/wkly30/
 
 dbType=oracle
+dbParent=311stg
 import.torque.database.user=krwkly30
 import.torque.database.schema=krwkly30
 import.torque.database.password=wkly174kr
