--- a/kc/kctrunk/deploy.cfg
+++ b/kc/kctrunk/deploy.cfg
@@ -1,9 +1,12 @@
 svnLocation=kc_project/trunk
+dbSvnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kc-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
 dbType=oracle
 dbMode=embedded
+dbParent=311stg
+dbImportMasks=KCR_*_B000.sql KC_*_B000.sql KCR_*_??S?.sql KC_*_??S?.sql
 import.torque.database.user=kctrunk
 import.torque.database.schema=kctrunk
 import.torque.database.password=trunk174kc
