--- a/kc/kcwkly30/deploy.cfg
+++ b/kc/kcwkly30/deploy.cfg
@@ -1,9 +1,12 @@
 svnLocation=kc_project/trunk
+dbSvnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kc-wkly30.war
 configURL=test.kc.kuali.org:~/kuali/main/wkly30/
 
 dbType=oracle
 dbMode=embedded
+dbParent=311stg
+dbImportMasks=KCR_*_B000.sql KC_*_B000.sql KCR_*_??S?.sql KC_*_??S?.sql
 import.torque.database.user=kcwkly30
 import.torque.database.schema=kcwkly30
 import.torque.database.password=wkly174kc
