--- a/kc/krtrunk/deploy.cfg
+++ b/kc/krtrunk/deploy.cfg
@@ -1,8 +1,10 @@
 svnLocation=rice/tags/rice-1.0.3.2
+dbSvnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
 dbType=oracle
+dbParent=311stg
 import.torque.database.user=krtrunk
 import.torque.database.schema=krtrunk
 import.torque.database.password=trunk174kr
