Updating configs to remove redundant dbSvnLocation parms
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5798 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcparm30/deploy.cfg
+++ b/kc/kcparm30/deploy.cfg
@@ -4,6 +4,7 @@ configURL=test.kc.kuali.org:~/kuali/main/parm30/
 
 dbType=oracle
 dbMode=bundled
+dbParent=311stg
 import.torque.database.user=kcparm30
 import.torque.database.schema=kcparm30
 import.torque.database.password=parm174kc
