Updating db configs for release env
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5799 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcrelease/deploy.cfg
+++ b/kc/kcrelease/deploy.cfg
@@ -4,6 +4,8 @@ configURL=test.kc.kuali.org:~/kuali/main/release/
 
 dbType=oracle
 dbMode=embedded
+dbParent=311stg
+dbImportMasks=KCR_*_B000.sql KC_*_B000.sql KCR_*_??S?.sql KC_*_??S?.sql
 import.torque.database.user=kcrelease
 import.torque.database.schema=kcrelease
 import.torque.database.password=release174kc
