--- a/kc/krrelease/deploy.cfg
+++ b/kc/krrelease/deploy.cfg
@@ -1,8 +1,10 @@
 svnLocation=rice/tags/rice-1.0.3.2
+dbSvnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/release/webapps/kr-release.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
 dbType=oracle
+dbParent=311stg
 import.torque.database.user=krrelease
 import.torque.database.schema=krrelease
 import.torque.database.password=release174kr
