--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -56,6 +56,10 @@
   </scm>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
+    <deploy.groupId>org.kuali.rice</deploy.groupId>
+    <deploy.artifactId>rice-sampleapp</deploy.artifactId>
+    <deploy.version>2.0.0-m7-SNAPSHOT</deploy.version>
+    <deploy.type>war</deploy.type>
   </properties>
   <build>
     <plugins>
@@ -72,10 +76,10 @@
             <configuration>
               <artifactItems>
                 <artifactItem>
-                  <groupId>org.kuali.rice</groupId>
-                  <artifactId>rice-sampleapp</artifactId>
-                  <version>2.0.0-m7-SNAPSHOT</version>
-                  <type>war</type>
+                  <groupId>${deploy.groupId}</groupId>
+                  <artifactId>${deploy.artifactId}</artifactId>
+                  <version>${deploy.version}</version>
+                  <type>${deploy.type}</type>
                   <destFileName>ROOT.war</destFileName>
                 </artifactItem>
               </artifactItems>
