git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1195 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -71,6 +71,7 @@
         <executions>
           <execution>
             <id>get</id>
+            <phase>package</phase>
             <goals>
               <goal>get</goal>
             </goals>
@@ -85,6 +86,7 @@
           </execution>
           <execution>
             <id>copy</id>
+            <phase>package</phase>
             <goals>
               <goal>copy</goal>
             </goals>
