--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -22,22 +22,18 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>Kuali Application Deployment</name>
   <description>
-    This POM makes use of the maven-exec-plugin to deploy live instances of Kuali Applications to
+    This POM deploys instances of Kuali Applications to
     environments on EC2. Any config files needed for an environment
     are automatically generated and copied over. The
     database is reset using Impex data.
     The steps it follows are:
     1 - Stop the remote Tomcat instance
-    2 - Remove the
-    directory on the remote server containing the old unpacked WAR file
-    3 - Generate config files appropriate for the
-    target environment
+    2 - Remove the directory on the remote server containing the old unpacked WAR file
+    3 - Generate config files appropriate for the target environment
     4 - Copy config files into the environment
     5 - Copy a new WAR file into the environment
-    6 - Reset
-    the remote database
-    7 - Perform any cleanup necessary (by default, it removes the old Tomcat logs and the old Tomcat
-    "work" directory)
+    6 - Reset the remote database
+    7 - Perform any cleanup necessary (by default, it removes the old Tomcat logs and the old Tomcat "work" directory)
     8 - Restart the remote Tomcat instance
   </description>
   <repositories>
