--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -57,9 +57,13 @@
   <properties>
     <maven.test.skip>true</maven.test.skip>
     <kuali.testjar.phase>none</kuali.testjar.phase>
+
     <deploy.groupId>org.kuali.rice</deploy.groupId>
     <deploy.artifactId>rice-sampleapp</deploy.artifactId>
     <deploy.version>2.0.0-m7-SNAPSHOT</deploy.version>
+    <deploy.local.config.file>${project.build.directory}/classes/rice/sample-app-config.xml</deploy.local.config.file>
+    <deploy.remote.user>root</deploy.remote.user>
+
     <deploy.packaging>war</deploy.packaging>
     <deploy.filename>ROOT.war</deploy.filename>
     <deploy.repositoryUrl>http://nexus.kuali.org/content/groups/public</deploy.repositoryUrl>
