--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -174,6 +174,8 @@
               </arguments>
             </configuration>
           </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
