git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1208 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -68,7 +68,7 @@
     <deploy.filename>ROOT.war</deploy.filename>
     <deploy.repositoryUrl>http://nexus.kuali.org/content/groups/public</deploy.repositoryUrl>
     <deploy.scp.path>/usr/bin/scp</deploy.scp.path>
-    <deploy.auth>/home/tomcat/kr-key.pem</deploy.auth>
+    <deploy.auth>/home/ubuntu/kr-key.pem</deploy.auth>
   </properties>
   <profiles>
     <profile>
