--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -62,7 +62,8 @@
     <remote.war.dir>${remote.tomcat.home}/webapps/ROOT</remote.war.dir>
     <deploy.packaging>war</deploy.packaging>
     <local.filename>ROOT.war</local.filename>
-    <local.war.file>${project.build.directory}/${local.filename}</local.war.file>
+    <!-- <local.war.file>${project.build.directory}/${local.filename}</local.war.file> -->
+    <local.war.file>/opt/jenkins-home/jobs/rice-trunk-nightly/workspace/sampleapp/target/rice-sampleapp-2.0.0-m7-SNAPSHOT.war</local.war.file>
     <deploy.repositoryUrl>http://nexus.kuali.org/content/groups/public</deploy.repositoryUrl>
     <scp.path>/usr/bin/scp</scp.path>
     <ssh.path>/usr/bin/ssh</ssh.path>
@@ -135,7 +136,7 @@
         <executions>
           <execution>
             <id>get</id>
-            <phase>package</phase>
+            <phase>none</phase>
             <goals>
               <goal>get</goal>
             </goals>
@@ -150,7 +151,7 @@
           </execution>
           <execution>
             <id>copy</id>
-            <phase>package</phase>
+            <phase>none</phase>
             <goals>
               <goal>copy</goal>
             </goals>
