git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1224 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -275,7 +275,7 @@
               <goal>exec</goal>
             </goals>
             <configuration>
-              <executable>$ssh.path}</executable>
+              <executable>${ssh.path}</executable>
               <arguments>
                 <argument>-i</argument>
                 <argument>${deploy.auth}</argument>
