git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1227 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -290,7 +290,7 @@
             </configuration>
           </execution>
           <execution>
-            <id>start-remote-tomcat-rice</id>
+            <id>start-remote-tomcat</id>
             <phase>package</phase>
             <goals>
               <goal>exec</goal>
