git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1228 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -311,6 +311,23 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.kuali.maven.plugins</groupId>
+        <artifactId>maven-http-plugin</artifactId>
+        <version>1.0.1</version>
+        <executions>
+          <execution>
+            <id>wait-for-tomcat-startup</id>
+            <phase>package</phase>
+            <goals>
+              <goal>wait</goal>
+            </goals>
+            <configuration>
+              <url>${remote.public.url}</url>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
